--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -12,7 +12,7 @@
 
         <div id='options'>
           <p>
-            <button class='btn start' onclick='restart()'>Begin</button>
+            <button class='btn start' onclick='restart()'>Help me find a useful checklist</button>
             <button class='btn yes' onclick='yes()'>Yes</button>
             <button class='btn no' onclick='no()'>No</button>
           </p>
