--- a/_layouts/wizard.html
+++ b/_layouts/wizard.html
@@ -28,13 +28,13 @@
       </div>
     </div>
 
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/bootstrap-filestyle.js"></script>
-    <script src="/js/ie10viewporthack.js"></script>
-    <script src="/js/offcanvas.js"></script>
-    <script src="/js/iframeResizer.contentWindow.min.js"></script>
-    <script src="/js/lodash.min.js"></script>
-    <script src="/js/jst.js"></script>
-    <script src="/js/equator.js"></script>
+    <script src="/{{site.baseurl}}/js/bootstrap.js"></script>
+    <script src="/{{site.baseurl}}/js/bootstrap-filestyle.js"></script>
+    <script src="/{{site.baseurl}}/js/ie10viewporthack.js"></script>
+    <script src="/{{site.baseurl}}/js/offcanvas.js"></script>
+    <script src="/{{site.baseurl}}/js/iframeResizer.contentWindow.min.js"></script>
+    <script src="/{{site.baseurl}}/js/lodash.min.js"></script>
+    <script src="/{{site.baseurl}}/js/jst.js"></script>
+    <script src="/{{site.baseurl}}/js/equator.js"></script>
   </body>
 </html>
