--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,10 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<link rel="stylesheet" href="/css/offcanvas.css">
-<link rel="stylesheet" href="/css/bootstrap-theme.css">
-<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="/css/bootstrap.css">
+<link rel="stylesheet" href="/{{site.baseurl}}/css/offcanvas.css">
+<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap-theme.css">
+<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap.css">
 
 <link rel="stylesheet" href="{{ "/css/penelope.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -16,4 +16,4 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:600,600italic,700normal,700italic,100,400,500,500italic,200,700,400italic,300,300italic">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-<script src="/js/jquery-2.1.0.min.js"></script>
+<script src="/{{site.baseurl}}/js/jquery-2.1.0.min.js"></script>
