--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<title>{{ site.title }}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 <link rel="stylesheet" href="/{{site.baseurl}}/css/offcanvas.css">
@@ -10,10 +10,10 @@
 <link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap.css">
 
-<link rel="stylesheet" href="{{ "/css/penelope.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/wizard.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:600,600italic,700normal,700italic,100,400,500,500italic,200,700,400italic,300,300italic">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-<script src="/{{site.baseurl}}/js/jquery-2.1.0.min.js"></script>
+<script src="{{ "/js/jquery-2.1.0.min.js" | prepend: site.baseurl }}"></script>
