--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,9 @@
 <title>{{ site.title }}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<link rel="stylesheet" href="/{{site.baseurl}}/css/offcanvas.css">
-<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap-theme.css">
-<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="/{{site.baseurl}}/css/bootstrap.css">
+<link rel="stylesheet" href="{{ "/css/offcanvas.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/bootstrap-theme.min.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 <link rel="stylesheet" href="{{ "/css/wizard.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
