Changed URL details

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
   </p>
 </footer>
 
-<script src="/js/bootstrap.js"></script>
-<script src="/js/ie10viewporthack.js"></script>
-<script src="/js/offcanvas.js"></script>
+<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/offcanvas.js" | prepend: site.baseurl }}"></script>
