--- a/_includes/iframe-head.html
+++ b/_includes/iframe-head.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{ "/css/bootstrap-theme.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="{{ "/css/wizard.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/equator.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:600,600italic,700normal,700italic,100,400,500,500italic,200,700,400italic,300,300italic">
