--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -154,13 +154,13 @@
         { idx: 11, yes: 'tripod', no: 'library', text: 'Did the research develop, validate or update a general prediction model for diagnosis or prognosis?' },
       ];
     </script>
-    <script src="/{{site.baseurl}}/js/bootstrap.js"></script>
-    <script src="/{{site.baseurl}}/js/bootstrap-filestyle.js"></script>
-    <script src="/{{site.baseurl}}/js/ie10viewporthack.js"></script>
-    <script src="/{{site.baseurl}}/js/offcanvas.js"></script>
-    <script src="/{{site.baseurl}}/js/iframeResizer.contentWindow.min.js"></script>
-    <script src="/{{site.baseurl}}/js/lodash.min.js"></script>
-    <script src="/{{site.baseurl}}/js/jst.js"></script>
-    <script src="/{{site.baseurl}}/js/equator.js"></script>
+    <script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/bootstrap-filestyle.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/offcanvas.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/iframeResizer.contentWindow.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/lodash.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/jst.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/equator.js" | prepend: site.baseurl }}"></script>
   </body>
 </html>
