--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
-    <script src="/js/iframeResizer.min.js"></script>
+    <script src="{{ "js/iframeResizer.min.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript">
       iFrameResize({
         log: true
