--- a/_layouts/wizard.html
+++ b/_layouts/wizard.html
@@ -28,14 +28,14 @@
       </div>
     </div>
 
-    <script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/bootstrap-filestyle.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/offcanvas.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/iframeResizer.contentWindow.min.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/lodash.min.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/jst.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/equator.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/bootstrap.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/bootstrap-filestyle.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/offcanvas.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/iframeResizer.contentWindow.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/lodash.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/jst.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "js/equator.js" | prepend: site.baseurl }}"></script>
 
   </body>
 </html>
