Changed URL details

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <p class='text-right'>
-    <a href='http://www.peneloperesearch.com/'><img src='/images/penelope_logo_name_black.png'></img></a><br/>
+    <a href='http://www.peneloperesearch.com/'><img src="{{ "images/penelope_logo_name_black.png" | prepend: site.baseurl }}"></img></a><br/>
     &copy; 2015 All Rights Reserved.
   </p>
 </footer>
 
-<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/offcanvas.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "js/bootstrap.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "js/ie10viewporthack.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "js/offcanvas.js" | prepend: site.baseurl }}"></script>
