Changed URL details

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="{{ "css/offcanvas.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "css/bootstrap-theme.min.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ "css/bootstrap.css" | prepend: site.baseurl }}">
 
 <link rel="stylesheet" href="{{ "css/penelope.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
