Fixed Restart button link

--- a/_includes/answer-action.html
+++ b/_includes/answer-action.html
@@ -11,6 +11,6 @@
     <a href='{{include.prevResult}}.html' class='btn btn-default'>Back</a>
   </div>
   <div class='col-xs-6'>
-    <a href='equatorNew.html' class='btn btn-default'>Restart</a>
+    <a href='main.html' class='btn btn-default'>Restart</a>
   </div>
 </div>
