--- a/_includes/question-action.html
+++ b/_includes/question-action.html
@@ -15,6 +15,6 @@
     {% endif %}
   </div>
   <div class='col-xs-6'>
-    <a href='equatorNew.html' class='btn btn-default'>Restart</a>
+    <a href='main.html' class='btn btn-default'>Restart</a>
   </div>
 </div>
