Moved button for answer

--- a/_includes/answer-information.html
+++ b/_includes/answer-information.html
@@ -1,9 +1,9 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-sm-3'>
+    <div class='col-xs-3'>
       <a href='{{include.checkListLink}}' class='btn btn-info'>Download Checklist</a>
     </div>
-    <div class='col-sm-9'>
+    <div class='col-xs-9'>
       <p>This checklist sets out the important things readers need to know about your work. It's based on the <a href='{{include.checkListLink}}'>{{include.checkList}} guidelines</a> which have been developed by experts in the reporting of systematic reviews.</p>
     </div>
   </div>
