--- a/_includes/library-information.html
+++ b/_includes/library-information.html
@@ -1,5 +1,5 @@
 <div class='col-xs-3'>
-  <a href='http://www.equator-network.org' target='_blank' class='btn btn-info'>Search Library</a>
+  <a href='http://www.equator-network.org/reporting-guidelines/' target='_blank' class='btn btn-info'>Search Library</a>
 </div>
 <div class='col-xs-9'>
   {{content}}
