--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,11 +1,14 @@
-
-<p class='pull-right'>Based on work by:
-  <a href='http://www.equator-network.org' target='_blank'>
-    <img src="{{ "images/equator_logo.png" | prepend: site.baseurl }}" class="img-responsive" alt="EQUATOR">
-  </a>
-</p>
-<p class='pull-right'>Made by:
-  <a href='http://www.peneloperesearch.com' target="_blank">
-    <img src="{{ "images/penelope_logo_name_black.png" | prepend: site.baseurl }}" class="img-responsive" alt="Penelope Research">
-  </a>
-</p>
+<div class='logo-inner'>
+  <p>
+    Based on work by:
+    <a href='http://www.equator-network.org' target='_blank'>
+      <img src="{{ "images/equator_logo.png" | prepend: site.baseurl }}" class="img-responsive" alt="EQUATOR">
+    </a>
+  </p>
+  <p>
+    Made by:
+    <a href='http://www.peneloperesearch.com' target="_blank">
+      <img src="{{ "images/penelope_logo_name_black.png" | prepend: site.baseurl }}" class="img-responsive" alt="Penelope Research">
+    </a>
+  </p>
+</div>
