Fixes for back button. Added additional text for ARRIVE (and tweaked CSS sizing). Added extra template text. Restructured results.

--- a/_includes/answer-information.html
+++ b/_includes/answer-information.html
@@ -4,7 +4,7 @@
       <a href='{{include.checkListLink}}' class='btn btn-info' target="_blank">Download Checklist</a>
     </div>
     <div class='col-xs-9'>
-      <p>This checklist sets out the important things readers need to know about your work. It's based on the {{include.checkList}} guidelines which have been developed by experts in the reporting of systematic reviews.</p>
+      <p>This checklist sets out the important things readers need to know about your work. It's based on the {{include.checkList}} guidelines which have been developed by experts in the reporting of {{include.expertsIn}}.</p>
     </div>
   </div>
   <p>
