--- a/_layouts/wizard.html
+++ b/_layouts/wizard.html
@@ -8,7 +8,7 @@
       {% include title.html %}
     </div>
     <div class='information'>
-      {% include {{page.information}} checkList=page.checkList checkListLink=page.checkListLink moreInfoLink=page.moreInfoLink extensionsLink=page.extensionsLink %}
+      {% include {{page.information}} checkList=page.checkList checkListLink=page.checkListLink moreInfoLink=page.moreInfoLink extensionsLink=page.extensionsLink additional=page.additional expertsIn=page.expertsIn %}
     </div>
     <div class='action'>
       <div class='row'>
