--- a/_includes/start-action.html
+++ b/_includes/start-action.html
@@ -3,6 +3,6 @@
     <a href='question0.html' class='btn btn-info'>Help me find a useful checklist</a>
   </div>
   <div class='col-xs-6'>
-    <a href='library.html' class='btn btn-info'>I already know which checklist I need</a>
+    <a href='resultLibrary.html' class='btn btn-info'>I already know which checklist I need</a>
   </div>
 </div>
